[gd_scene load_steps=13 format=2]

[ext_resource path="res://mine/mine.gd" type="Script" id=1]
[ext_resource path="res://launch_site/mine_site.png" type="Texture" id=2]
[ext_resource path="res://mine/scientist.png" type="Texture" id=3]
[ext_resource path="res://font1.tres" type="DynamicFont" id=4]
[ext_resource path="res://art/arrow.png" type="Texture" id=5]
[ext_resource path="res://art/arrow_pressed.png" type="Texture" id=6]
[ext_resource path="res://art/arrow_hover.png" type="Texture" id=7]
[ext_resource path="res://mine/scientist1.png" type="Texture" id=8]
[ext_resource path="res://mine/scientist_pressed.png" type="Texture" id=9]
[ext_resource path="res://mine/scientist_hover.png" type="Texture" id=10]

[sub_resource type="InputEventKey" id=1]
scancode = 83

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="mine" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.811765, 0.890196, 1, 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 128, 72 )

[node name="mine_hud" type="MarginContainer" parent="."]
margin_right = 128.0
margin_bottom = 72.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="mine_hud"]
margin_left = 3.0
margin_top = 3.0
margin_right = 125.0
margin_bottom = 69.0
custom_constants/separation = -20

[node name="HBoxContainer2" type="HBoxContainer" parent="mine_hud/VBoxContainer"]
margin_top = 32.0
margin_right = 122.0
margin_bottom = 43.0
size_flags_vertical = 10

[node name="TextureRect" type="TextureRect" parent="mine_hud/VBoxContainer/HBoxContainer2"]
margin_top = 2.0
margin_right = 9.0
margin_bottom = 11.0
size_flags_vertical = 10
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="mine_hud/VBoxContainer/HBoxContainer2"]
margin_left = 13.0
margin_right = 13.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="mine_hud/VBoxContainer"]
margin_top = 57.0
margin_right = 122.0
margin_bottom = 66.0
size_flags_vertical = 10
custom_constants/separation = 2

[node name="back_btn" type="TextureButton" parent="mine_hud/VBoxContainer/HBoxContainer"]
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 1
size_flags_vertical = 8
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="request_btn" type="TextureButton" parent="mine_hud/VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 20.0
margin_bottom = 9.0
mouse_filter = 1
size_flags_vertical = 8
shortcut = SubResource( 2 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
[connection signal="pressed" from="mine_hud/VBoxContainer/HBoxContainer/back_btn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="mine_hud/VBoxContainer/HBoxContainer/request_btn" to="." method="_on_request_btn_pressed"]
